[package]
name = "bindings"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/mmaccel"

[dependencies]
windows = "0.9.1"
serde = { version = "1.0.125", features = ["derive"] }

[build-dependencies]
windows = "0.9.1"
