[package]
name = "d3d9"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/mmaccel"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = { path = "../bindings" }
once_cell = "1.7.2"
libloading = "0.7.0"
