[package]
name = "d3d9"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.9.0"
libloading = "0.7.3"
wrapper = { path = "../wrapper" }

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]