[package]
name = "key_config"
version = "2.0.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"

[dependencies]
bindings = { path = "../bindings" }
key_map = { path = "../key_map" }
d3d9 = { path = "../d3d9" }
once_cell = "1.7.2"
windows = "0.9.1"
wita = { version = "0.9.6", features = ["serde"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
thiserror = "1.0.24"
log4rs = "1.0.0"

[build-dependencies]
embed-resource = "1.6.2"
