[package]
name = "key_config"
version = "2.0.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"
publish = false

[dependencies]
key_map = { path = "../key_map" }
d3d9 = { path = "../d3d9" }
once_cell = "1.9.0"
wita = { version = "0.11.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
thiserror = "1.0.30"
log4rs = "1.0.0"
wrapper = { path = "../wrapper" }

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Graphics_Gdi",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Controls_RichEdit",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
embed-resource = "1.6.5"
