[package]
name = "key_map"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"
publish = false

[dependencies]
bindings = { path = "../bindings" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
