[package]
name = "mmaccel"
version = "2.0.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = { path = "../bindings" }
key_map = { path = "../key_map" }
once_cell = "1.7.2"
thiserror = "1.0.24"
env_logger = "0.8.3"
windows = "0.9.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_warn"] }
