[package]
name = "mmaccel"
version = "2.0.3"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wrapper = { path = "../wrapper" }
key_map = { path = "../key_map" }
once_cell = "1.9.0"
thiserror = "1.0.30"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
log = { version = "0.4.14", features = ["max_level_debug", "release_max_level_info"] }
log4rs = "1.0.0"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Media",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D9",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
]