[package]
name = "mmaccel_ex"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bindings = { path = "../bindings" }
once_cell = "1.7.2"
log = "0.4.14"
thiserror = "1.0.24"
env_logger = "0.8.3"
windows = "0.8.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
