[package]
name = "wrapper"
version = "0.1.0"
authors = ["LNSEAB <691752+LNSEAB@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/LNSEAB/MMAccel"
publish = false

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
]